# gen3-metadata-templates

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish_pypi.yml  publish_testpypi.yml
docs/: cli-reference.md  concepts.md  filling-templates.md  generating-templates.md  index.md  library-api.md  planning.md  quickstart.md  troubleshooting.md  validating.md
examples/output_templates/: lipidomics_file.xlsx  unaligned_reads_file.xlsx
examples/schema/json/: acdc_schema.json
examples/schema/yaml/: _definitions.yaml  _terms.yaml  acknowledgement.yaml  analysis_workflow.yaml  blood_pressure_test.yaml  clinical_descriptor.yaml  demographic.yaml  exposure.yaml  genomics_assay.yaml  genomics_file.yaml  imaging_file.yaml  lab_result.yaml  lipidomics_assay.yaml  lipidomics_file.yaml  lipidomics_mapping_file.yaml  medical_history.yaml  medication.yaml  metabolomics_assay.yaml  metabolomics_file.yaml  project.yaml  proteomics_assay.yaml  proteomics_file.yaml  publication.yaml  qc_file.yaml  sample.yaml  serum_marker_assay.yaml  serum_marker_file.yaml  subject.yaml  supplementary_file.yaml
notebooks/: prototyping.ipynb
scripts/: build.sh
src/gen3_metadata_templates/: __init__.py  cli.py  constants.py  errors.py  model.py  paths.py  props.py  schema.py  templates.py
src/gen3_metadata_templates/validation/: __init__.py  messages.py  report.py  runner.py
src/gen3_metadata_templates/workbook/: __init__.py  annotate.py  naming.py  reader.py  writer.py
tests/: conftest.py  test_acdc_integration.py  test_cli.py  test_dummy.py  test_messages.py  test_model.py  test_naming.py  test_paths.py  test_props.py  test_reader.py  test_schema.py  test_templates.py  test_validation_roundtrip.py  test_writer.py
tests/fixtures/: mini_schema.json
