[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen3-metadata-templates"
version = "0.1.0"
description = "Create Gen3 Metadata Submission Templates from a Gen3 JSON Schema"
readme = "README.md"
authors = [{ name = "Joshua Harris", email = "harjo391@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
