[project]
name = "gen3_metadata_templates"
version = "2.0.0"
description = "Generate and validate Gen3 metadata submission templates from a Gen3 JSON schema"
authors = [
    {name = "JoshuaHarris391",email = "harjo391@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9.5"
dependencies = [
    "gen3-validator (>=2.1.0,<3.0.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "typer (>=0.12.0,<1.0.0)",
    "rich (>=13.0.0,<15.0.0)"
]

[project.scripts]
g3mt = "gen3_metadata_templates.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
