[project]
name = "gen3_metadata_templates"
version = "2.0.0"
description = "Generate and validate Gen3 metadata submission templates from a Gen3 JSON schema"
authors = [
    {name = "JoshuaHarris391",email = "harjo391@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9.5"
dependencies = [
    "gen3-validator (>=2.1.0,<3.0.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "typer (>=0.12.0,<1.0.0)",
    "rich (>=13.0.0,<15.0.0)"
]

[project.scripts]
g3mt = "gen3_metadata_templates.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
ruff = ">=0.11.0,<1.0.0"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
extend-exclude = ["notebooks"]  # scratch prototyping, not shipped

[tool.ruff.lint]
# Note: pyupgrade (UP) is intentionally not selected. The package targets
# Python 3.9, where PEP 604 unions ("X | None") fail at runtime when Typer
# resolves annotations via typing.get_type_hints — so Optional[...] must stay.
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]  # line length is handled by the formatter, not enforced as a hard error

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]              # test helpers intentionally use simple patterns
"src/gen3_metadata_templates/cli.py" = ["B008"]  # typer.Argument/Option in defaults is the Typer idiom

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=9.0.0,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
